--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -126,8 +126,6 @@
     "CountUnit": "字",
     "InputLocation": "输入位置",
     "LocationPlace": "请输入位置",
-    "DisplayIconText": "显示图标文本",
-    "HideIconText": "隐藏图标文本",
     "DisplayOtherInfo": "显示其他信息",
     "HideOtherInfo": "隐藏其他信息"
   },
@@ -425,8 +423,8 @@
           "Path": "设置 / 日记 / 其他信息"
         },
         "IconText": {
-          "Name": "图标文本",
-          "Path": "设置 / 日记 / 图标文本"
+          "Name": "天气、心情文本",
+          "Path": "设置 / 日记 / 天气、心情文本"
         },
         "EditAutoSave": {
           "Name": "自动保存",
@@ -765,7 +763,7 @@
     "Name": "隐私模式",
     "ShowSetPrivacyDiary": {
       "Title": "显示设为私密",
-      "SubTitle": "在日记卡片菜单中显示设为私密选项"
+      "SubTitle": "在日记菜单中显示设为私密选项"
     },
     "HidePrivacyModeEntrance": {
       "Title": "隐藏默认入口",
@@ -779,7 +777,8 @@
     "PasswordError": "密码错误",
     "PrivacyModeFunctionSearchKey": {
       "Title": "自定义搜索关键词",
-      "SubTitle": "在功能搜索中输入关键词，即可显示隐私模式"
+      "SubTitle": "在功能搜索中输入关键词，即可显示隐私模式",
+      "CurrentKey": "当前关键词"
     },
     "PrivacyModeFunctionSearchKeyPlaceholder": "请输入关键词",
     "EnterPrivacyMode": "进入隐私模式",
