--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -431,10 +431,6 @@
           "Path": "设置 / 日记 / 自动保存",
           "Close": "关闭"
         },
-        "ImageLazy": {
-          "Name": "图片懒加载",
-          "Path": "设置 / 日记 / 图片懒加载"
-        },
         "FirstLineIndent": {
           "Name": "首行缩进",
           "Path": "设置 / 日记 / 首行缩进"
@@ -446,6 +442,14 @@
         "TaskListLineThrough": {
           "Name": "任务列表删除线",
           "Path": "设置 / 日记 / 任务列表删除线"
+        },
+        "ImageLazy": {
+          "Name": "图片懒加载",
+          "Path": "设置 / 日记 / 图片懒加载"
+        },
+        "AutoPlay": {
+          "Name": "音视频自动播放",
+          "Path": "设置 / 日记 / 音视频自动播放"
         }
       },
       "Snackbars": {
