--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -170,7 +170,8 @@
   "Read": {
     "OpenPrivacy": "Private",
     "ClosePrivacy": "Cancel private",
-    "PrivacyAlert": "Moved to privacy mode",
+    "Moved to privacy mode": "Moved to privacy mode",
+    "Removed from privacy mode": "Removed from privacy mode",
     "CopyReference": "Copy link",
     "DiaryLink": "Diary link",
     "Search": "Search",
@@ -803,7 +804,13 @@
       "Title": "Enable dark mode",
       "SubTitle": "Enable dark mode when entering privacy mode"
     },
-    "Description": "Privacy mode only applies to diaries, not to tags, locations, files, and other content"
+    "Move the old version of Privacy Diary": {
+      "Title": "Move the old version of Privacy Diary",
+      "SubTitle": "Move the data from the old version of the privacy diary to the new version"
+    },
+    "Successfully moved": "Successfully moved",
+    "No diary that needs to be moved": "No diary that needs to be moved",
+    "Description": "Privacy mode data from version 1.3.9 and earlier will be automatically migrated to the new version of privacy mode after the update. \nIf the old privacy data is obtained by restoring backups or importing, it will be displayed together with the regular diary. Please click the migration button above to move them to privacy mode."
   },
   "SponsorSupport": {
     "Name": "Support it",
