--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -170,7 +170,8 @@
   "Read": {
     "OpenPrivacy": "设为私密",
     "ClosePrivacy": "取消私密",
-    "PrivacyAlert": "已移动至隐私模式",
+    "Moved to privacy mode": "已移动至隐私模式",
+    "Removed from privacy mode": "已移出隐私模式",
     "CopyReference": "复制链接",
     "DiaryLink": "日记链接",
     "Search": "查找",
@@ -803,7 +804,13 @@
       "Title": "启用深色模式",
       "SubTitle": "进入隐私模式时启用深色模式"
     },
-    "Description": "隐私模式只适用于日记，不适用于标签、位置、文件等内容"
+    "Move the old version of Privacy Diary": {
+      "Title": "迁移旧版本的隐私日记",
+      "SubTitle": "将旧版隐私日记的数据移动到新版中"
+    },
+    "Successfully moved": "移动成功",
+    "No diary that needs to be moved": "没有需要移动的日记",
+    "Description": "1.3.9版本及以前的隐私模式数据，在更新后会自动迁移到新版本的隐私模式中。\n如果是通过恢复备份或导入而来的旧的隐私数据，会与普通日记一起显示，请点击上方的迁移按钮，将它们移动到隐私模式。"
   },
   "SponsorSupport": {
     "Name": "支持一下",
