--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -508,7 +508,7 @@
       "Subtitle": "Save as zip file of database file",
       "Success": "Backups success",
       "Fail": "Backups fail",
-      "Content": "The backup file contains diary data and media files"
+      "Content": "Backup files include diary data, media files, and settings"
     },
     "Restore": {
       "Title": "Restore",
@@ -650,7 +650,7 @@
   "VersionUpdate": {
     "LatestVersionUrl": "https://api.github.com/repos/Yu-Core/SwashbucklerDiary/releases/latest",
     "No updates": "Currently the latest version",
-    "Need updates": "Detected the latest version, do you want to proceed to update?",
+    "Need updates": "Detected the latest version, do you want to proceed to update? (If no new version is found, it may be under review)",
     "Check failed": "Detection failed for unknown reason",
     "Not prompting": "Don't prompt again next time"
   },
