--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/i18n/en-US.json
@@ -1,5 +1,5 @@
-{
-  "External images are not supported": "External images are not supported",
+﻿{
+  "External files are not supported": "External files are not supported",
   "pwa": {
     "new-content-available": "New content is available. Click Refresh to update.",
     "ignore": "Ignore",
