--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/i18n/zh-CN.json
@@ -1,5 +1,5 @@
-{
-  "External images are not supported": "不支持外部图片",
+﻿{
+  "External files are not supported": "不支持外部文件",
   "pwa": {
     "new-content-available": "新内容可用。点击 刷新 进行更新。",
     "ignore": "忽略",
