--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -405,6 +405,10 @@
           "Name": "标签",
           "Path": "设置 / 日记卡片 / 标签"
         },
+        "Location": {
+          "Name": "位置",
+          "Path": "设置 / 日记卡片 / 位置"
+        },
         "TimeFormat": {
           "Name": "时间格式",
           "Path": "设置 / 日记卡片 / 时间格式"
