--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -40,11 +40,11 @@
     "All": "全部",
     "Tag": "标签",
     "Welcome": {
-      "Morning": "早上好，又是全新的一天",
-      "Noon": "中午好，吃午饭了吗",
-      "Afternoon": "下午好，享受美好的下午时光",
-      "Night": "晚上好，该到了休息的时候",
-      "BeforeDawn": "凌晨好，愿你好梦"
+      "Morning": "晨光初现，愿你一天充满活力！",
+      "Noon": "阳光正暖，愿你心情如晴空般明朗！",
+      "Afternoon": "午后时光，愿你轻松自在，收获满满！",
+      "Night": "夜幕降临，愿你卸下疲惫，放松身心！",
+      "BeforeDawn": "夜深人静，愿你安心入眠，迎接美好明天！"
     }
   },
   "Tag": {
@@ -719,7 +719,7 @@
     },
     "Introduce": {
       "Title": "支持 侠客日记 的开发",
-      "Content": "为什么做这个日记App？初中的时候，特别喜欢记日记，记一些看起来鸡毛蒜皮、傻里傻气的小事。如今偶尔看看，已然成了最珍贵的回忆，所以不想丢掉这个好习惯。现在这个时代，纸笔已经用不惯了，用手机和电脑写日记也就成了理所当然的事情。\n\n尝试过很多日记App，但总觉得差了点什么。要登录，要收费，有广告，界面乱，功能简陋，操作繁琐，反正总是要沾上一样的。想好好记个日记真的好难，干脆自己做一个App吧。\n\n所以，做了这个日记App，想让每一个热爱写日记的人，都能找回写日记的快乐。如果觉得它还不错，可以给予一份捐助，帮助我们更好地开发和维护这个项目。感谢一路的支持，愿我们都能在自己的江湖里，成为心中的侠客。"
+      "Content": "为什么开发这个日记App？初中的时候，特别喜欢写日记，记一些看起来鸡毛蒜皮、傻里傻气的小事。偶尔看看，已然成了珍贵的回忆，所以写日记这个好习惯应该保持下去。现在这个时代，纸笔用的少了，更加便于整理的日记App也就成了主流。\n\n尝试过很多日记App，总觉得差了点什么。要登录，要收费，有广告，界面乱，功能简陋，操作繁琐，总是要沾上一样的。想好好写个日记确实很难，干脆自己做一个吧。\n\n做这个日记App，是想让每一个热爱写日记的人，都能找回写日记的快乐。如果觉得它还不错，可以给予一份捐助，帮助我们更好地开发和维护这个项目。感谢一路的支持，愿我们都能在自己的江湖里，成为心中的侠客。"
     }
   },
   "SponsorList": {
