--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -63,13 +63,13 @@
     "NoTag": "暂无标签"
   },
   "Week": {
-    "0": "星期日",
-    "1": "星期一",
-    "2": "星期二",
-    "3": "星期三",
-    "4": "星期四",
-    "5": "星期五",
-    "6": "星期六"
+    "0": "周日",
+    "1": "周一",
+    "2": "周二",
+    "3": "周三",
+    "4": "周四",
+    "5": "周五",
+    "6": "周六"
   },
   "Diary": {
     "Tag": "标签",
@@ -480,6 +480,14 @@
       "StatisticsCard": {
         "Name": "统计卡片",
         "Path": "设置 / 统计卡片"
+      },
+      "Calendar": {
+        "Name": "日历",
+        "Path": "设置 / 日历",
+        "FirstDayOfWeek": {
+          "Name": "每周第一天",
+          "Path": "设置 / 日历 / 每周第一天"
+        }
       }
     },
     "Other": {
