🆕 feat: reference and referenced

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -118,9 +118,9 @@
   "Cancel privacy": "Cancel privacy",
   "Moved to privacy mode": "Moved to privacy mode",
   "Removed from privacy mode": "Removed from privacy mode",
-  "Copy quote": "Copy quote",
+  "Copy reference": "Copy reference",
   "Copy link": "Copy link",
-  "Diary link": "Diary link",
+  "Diary reference": "Diary reference",
   "Look up": "Look up",
   "Look it up on the page": "Look it up on the page",
   "Swashbuckler Diary": "Swashbuckler Diary",
@@ -445,8 +445,8 @@
   "Delete unused files": "Delete unused files",
   "Sure to delete unused files?": "Sure to delete unused files?",
   "File does not exist": "File does not exist",
-  "View references": "View references",
-  "This file is not referenced": "This file is not referenced",
+  "View referenced": "View referenced",
+  "This file is not used": "This file is not used",
   "Privacy mode": "Privacy mode",
   "The display is set to private": "The display is set to private",
   "Show the Set Private option in the diary menu": "Show the Set Private option in the diary menu",
@@ -494,5 +494,13 @@
   "Select template when create": "Select template when create",
   "Setting / Template": "Setting / Template",
   "Setting / Template / Use Template Method": "Setting / Template / Use Template Method",
-  "Setting / Template / Select template when create": "Setting / Template / Select template when create"
+  "Setting / Template / Select template when create": "Setting / Template / Select template when create",
+  "Select diary": "Select diary",
+  "Reference diary": "Reference diary",
+  "This diary is not referenced": "This diary is not referenced",
+  "This template is not referenced": "This template is not referenced",
+  "Template reference": "Template reference",
+  "Referenced situation": "Referenced situation",
+  "Used situation": "Used situation",
+  "View Used": "View Used"
 }
