--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -118,9 +118,9 @@
   "Cancel privacy": "取消私密",
   "Moved to privacy mode": "已移动至隐私模式",
   "Removed from privacy mode": "已移出隐私模式",
-  "Copy quote": "复制引用",
+  "Copy reference": "复制引用",
   "Copy link": "复制链接",
-  "Diary link": "日记链接",
+  "Diary reference": "日记引用",
   "Look up": "查找",
   "Look it up on the page": "在页面上查找",
   "Swashbuckler Diary": "侠客日记",
@@ -445,8 +445,8 @@
   "Delete unused files": "删除未使用文件",
   "Sure to delete unused files?": "确认删除未使用的文件？",
   "File does not exist": "文件不存在",
-  "View references": "查看引用",
-  "This file is not referenced": "此文件未被引用",
+  "View referenced": "查看被引用",
+  "This file is not used": "此文件未被使用",
   "Privacy mode": "隐私模式",
   "The display is set to private": "显示设为私密",
   "Show the Set Private option in the diary menu": "在日记菜单中显示设为私密选项",
@@ -494,5 +494,13 @@
   "Select template when create": "创建时选择模板",
   "Setting / Template": "设置 / 模板",
   "Setting / Template / Use Template Method": "设置 / 模板 / 使用模板方式",
-  "Setting / Template / Select template when create": "设置 / 模板 / 创建时选择模板"
+  "Setting / Template / Select template when create": "设置 / 模板 / 创建时选择模板",
+  "Select diary": "选择日记",
+  "Reference diary": "引用日记",
+  "This diary is not referenced": "此日记未被引用",
+  "This template is not referenced": "此模板未被引用",
+  "Template reference": "模板引用",
+  "Referenced situation": "被引用情况",
+  "Used situation": "被使用情况",
+  "View Used": "查看被使用"
 }
