🆕 feat: add moblie outline

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -443,5 +443,6 @@
   "Template reference": "Template reference",
   "Referenced situation": "Referenced situation",
   "Used situation": "Used situation",
-  "View Used": "View Used"
+  "View Used": "View Used",
+  "Hide outline": "Hide outline"
 }
