--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -443,5 +443,6 @@
   "Template reference": "模板引用",
   "Referenced situation": "被引用情况",
   "Used situation": "被使用情况",
-  "View Used": "查看被使用"
+  "View Used": "查看被使用",
+  "Hide outline": "隐藏大纲"
 }
