♻️ refactor: Enhance i18n dependency injection support and localization processing

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -338,12 +338,12 @@
   "Are you sure to clear all caches?": "Are you sure to clear all caches?",
   "Clean up successfully": "Clean up successfully",
   "Please enter the function you want to search for": "Please enter the function you want to search for",
-  "Month/Day": "Month/Day",
-  "Year/Month/Day": "Year/Month/Day",
-  "Month/Day Hour:Minute": "Month/Day Hour:Minute",
-  "Year/Month/Day Hour:Minute": "Year/Month/Day Hour:Minute",
-  "Month/Day Hour:Minute Week": "Month/Day Hour:Minute Week",
-  "Year/Month/Day Hour:Minute Week": "Year/Month/Day Hour:Minute Week",
+  "Year": "Year",
+  "Month": "Month",
+  "Day": "Day",
+  "Hour": "Hour",
+  "Minute": "Minute",
+  "Week": "Week",
   "Please enter device name": "Please enter device name",
   "Please enter scan port": "Please enter scan port",
   "Please enter transmission port": "Please enter transmission port",
@@ -372,12 +372,10 @@
   "Add image": "Add image",
   "Add audio": "Add audio",
   "Add video": "Add video",
-  "Time - Positive order": "Time - Positive order",
-  "Time - Reverse order": "Time - Reverse order",
-  "Count - Positive order": "Count - Positive order",
-  "Count - Reverse order": "Count - Reverse order",
-  "Name - Positive order": "Name - Positive order",
-  "Name - Reverse order": "Name - Reverse order",
+  "Positive order": "Positive order",
+  "Reverse order": "Reverse order",
+  "Name": "Name",
+  "Count": "Count",
   "Image": "Image",
   "No image": "No image",
   "Audio": "Audio",
