--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -338,12 +338,12 @@
   "Are you sure to clear all caches?": "确定清除所有缓存吗？",
   "Clean up successfully": "清理成功",
   "Please enter the function you want to search for": "请输入想要搜索的功能",
-  "Month/Day": "月/日",
-  "Year/Month/Day": "年/月/日",
-  "Month/Day Hour:Minute": "月/日 时:分",
-  "Year/Month/Day Hour:Minute": "年/月/日 时:分",
-  "Month/Day Hour:Minute Week": "月/日 时:分 星期",
-  "Year/Month/Day Hour:Minute Week": "年/月/日 时:分 星期",
+  "Year": "年",
+  "Month": "月",
+  "Day": "日",
+  "Hour": "时",
+  "Minute": "分",
+  "Week": "星期",
   "Please enter device name": "请输入设备名",
   "Please enter scan port": "请输入扫描端口",
   "Please enter transmission port": "请输入传输端口",
@@ -372,12 +372,10 @@
   "Add image": "添加图片",
   "Add audio": "添加音频",
   "Add video": "添加视频",
-  "Time - Positive order": "时间-正序",
-  "Time - Reverse order": "时间-倒序",
-  "Count - Positive order": "数量-正序",
-  "Count - Reverse order": "数量-倒序",
-  "Name - Positive order": "名称-正序",
-  "Name - Reverse order": "名称-倒序",
+  "Positive order": "正序",
+  "Reverse order": "倒序",
+  "Name": "名称",
+  "Count": "数量",
   "Image": "图片",
   "No image": "暂无图片",
   "Audio": "音频",
