🆕 feat: add Quick record

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -443,5 +443,7 @@
   "Used situation": "Used situation",
   "View Used": "View Used",
   "Hide outline": "Hide outline",
-  "Weather and mood icon": "Weather and mood icon"
+  "Weather and mood icon": "Weather and mood icon",
+  "Quick record": "Quick record",
+  "After opening the application, directly enter the editing page": "After opening the application, directly enter the editing page"
 }
