--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -443,5 +443,7 @@
   "Used situation": "被使用情况",
   "View Used": "查看被使用",
   "Hide outline": "隐藏大纲",
-  "Weather and mood icon": "天气、心情图标"
+  "Weather and mood icon": "天气、心情图标",
+  "Quick record": "快速记录",
+  "After opening the application, directly enter the editing page": "打开应用后，直接进入编辑页面"
 }
