--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -445,5 +445,9 @@
   "Hide outline": "隐藏大纲",
   "Weather and mood icon": "天气、心情图标",
   "Quick record": "快速记录",
-  "After opening the application, directly enter the editing page": "打开应用后，直接进入编辑页面"
+  "After opening the application, directly enter the editing page": "打开应用后，直接进入编辑页面",
+  "Set as default template": "设为默认模板",
+  "Cancel default template": "取消默认模板",
+  "Defalut": "默认",
+  "Only effective when no default template is set": "仅在未设置默认模板时生效"
 }
