--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -97,20 +97,20 @@
   "tornado": "龙卷风",
   "ultraviolet": "紫外线",
   "windy": "风",
-  "angry": "怒",
+  "angry": "生气",
   "confused": "困惑",
-  "cool": "酷",
-  "cry": "哭",
+  "cool": "得意",
+  "cry": "哭泣",
   "dead": "难受",
-  "devil": "恶",
-  "excited": "兴奋",
-  "frown": "愁",
-  "happy": "喜",
+  "devil": "嘿嘿",
+  "excited": "激动",
+  "frown": "担忧",
+  "happy": "开心",
   "kiss": "亲亲",
-  "lol": "乐",
+  "lol": "大笑",
   "neutral": "无感",
   "poop": "糟糕",
-  "sad": "悲",
+  "sad": "伤心",
   "sick": "病了",
   "tongue": "好吃",
   "wink": "眨眼",
