🆕 feat: export resource file

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -452,5 +452,7 @@
   "Default template": "Default template",
   "Automatically used when adding diary entries": "Automatically used when adding diary entries",
   "Create Time": "Create Time",
-  "Update Time": "Update Time"
+  "Update Time": "Update Time",
+  "Export files": "Export files",
+  "No file": "No file"
 }
