--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -452,5 +452,7 @@
   "Default template": "默认模板",
   "Automatically used when adding diary entries": "添加日记时自动使用",
   "Create Time": "创建时间",
-  "Update Time": "更新时间"
+  "Update Time": "更新时间",
+  "Export files": "导出文件",
+  "No file": "暂无文件"
 }
